# fsat_read_sensors

./: .clang-format  .gitignore  Makefile  README.md  docker-compose.yml  log.cpp  log.hpp  meson.build  meson_options.txt  read-sensors.cpp  sensor.cpp
grafana/dashboards/: flasat2.json
grafana/provisioning/dashboards/: main.yml
grafana/provisioning/datasources/: sqlite.yml
include/read-sensors/: db.hpp  ina219.hpp  ltc2983.hpp  parser.hpp  sensor-manager.hpp  sensor.hpp  tmp112.hpp  xadc.hpp
include/utils/: errors.hpp
include/utils/cli/: arg_handler.hpp
include/utils/iio/: channel.hpp  context.hpp  device.hpp
include/utils/log/: log.hpp
include/utils/zmq/: client.hpp  service.hpp  zprotocol.hpp
scripts/: gen_versioning.py  version.hpp.in
services/: read-sensors.service  read-sensors.socket
src/: daemon.cpp  daemon.hpp  db.cpp  db.hpp  ina219.cpp  ina219.hpp  log.cpp  log.hpp  ltc2983.cpp  main.cpp  meson.build  parser.hpp  read-sensors.hpp  sensor-manager.cpp  sensor-manager.hpp  sensor.cpp  sensor.hpp  tmp112.cpp  tmp112.hpp  xadc.cpp
utils/: meson.build
utils/cli/: arg_handler.cpp  meson.build
utils/iio/: channel.cpp  context.cpp  device.cpp  meson.build
utils/log/: log.cpp  meson.build
utils/zmq/: client.cpp  meson.build  service.cpp
